@@ -5,10 +5,11 @@
  */
 package org.redkale.util;
 
-import java.util.ArrayList;
-import java.util.List;
-import jdk.internal.org.objectweb.asm.*;
-import static jdk.internal.org.objectweb.asm.Opcodes.*;
+import java.util.*;
+import java.util.function.*;
+import org.redkale.asm.*;
+import static org.redkale.asm.ClassWriter.COMPUTE_FRAMES;
+import static org.redkale.asm.Opcodes.*;
 
 /**
  * 该类实现动态映射一个JavaBean类中成员对应的getter、setter方法； 代替低效的反射实现方式。
@@ -34,6 +35,8 @@ import static jdk.internal.org.objectweb.asm.Opcodes.*;
  * <blockquote><pre>
  *  Attribute&lt;Record, String&gt; nameAction = new Attribute&lt;Record, String&gt;() {
  *
+ *      private java.lang.reflect.Type _gtype = String.class;
+ *
  *      &#64;Override
  *      public String field() {
  *          return "name";
@@ -55,6 +58,11 @@ import static jdk.internal.org.objectweb.asm.Opcodes.*;
  *      }
  *
  *      &#64;Override
+ *      public java.lang.reflect.Type genericType() {
+ *          return _gtype;
+ *      }
+ *
+ *      &#64;Override
  *      public Class declaringClass() {
  *          return Record.class;
  *      }
@@ -66,14 +74,14 @@ import static jdk.internal.org.objectweb.asm.Opcodes.*;
  * 2、至少存在对应的getter、setter方法中的一个 <br>
  * 当不存在getter方法时，get操作固定返回null <br>
  * 当不存在setter方法时，set操作为空方法  <br>
- *
  * <p>
- * 详情见: http://redkale.org
+ * 详情见: https://redkale.org
  *
  * @author zhangjx
  * @param <T> 字段依附的类
  * @param <F> 字段的数据类型
  */
+@SuppressWarnings("unchecked")
 public interface Attribute<T, F> {
 
     /**
@@ -82,6 +90,15 @@ public interface Attribute<T, F> {
      * @return 字段的数据类型
      */
     public Class<? extends F> type();
+
+    /**
+     * 返回字段的数据泛型
+     *
+     * @return 字段的数据泛型
+     */
+    default java.lang.reflect.Type genericType() {
+        return type();
+    }
 
     /**
      * 返回字段依附的类名
@@ -101,6 +118,7 @@ public interface Attribute<T, F> {
      * 获取指定对象的该字段的值
      *
      * @param obj 指定对象
+     *
      * @return 字段的值
      */
     public F get(T obj);
@@ -114,16 +132,43 @@ public interface Attribute<T, F> {
     public void set(T obj, F value);
 
     /**
+     * 附加对象
+     *
+     * @param <E> 泛型
+     *
+     * @return 附加对象
+     */
+    default <E> E attach() {
+        return null;
+    }
+
+    /**
      * 根据一个Field生成 Attribute 对象。
      *
      * @param <T>   依附类的类型
      * @param <F>   字段类型
      * @param field 字段，如果该字段不存在则抛异常
+     *
      * @return Attribute对象
      */
     @SuppressWarnings("unchecked")
     public static <T, F> Attribute<T, F> create(final java.lang.reflect.Field field) {
-        return create((Class<T>) field.getDeclaringClass(), field.getName(), field, null, null);
+        return create((Class<T>) field.getDeclaringClass(), field.getName(), (Class) null, field, (java.lang.reflect.Method) null, (java.lang.reflect.Method) null, null);
+    }
+
+    /**
+     * 根据一个Field生成 Attribute 对象。
+     *
+     * @param <T>    依附类的类型
+     * @param <F>    字段类型
+     * @param field  字段，如果该字段不存在则抛异常
+     * @param attach 附加对象
+     *
+     * @return Attribute对象
+     */
+    @SuppressWarnings("unchecked")
+    public static <T, F> Attribute<T, F> create(final java.lang.reflect.Field field, Object attach) {
+        return create((Class<T>) field.getDeclaringClass(), field.getName(), (Class) null, field, (java.lang.reflect.Method) null, (java.lang.reflect.Method) null, attach);
     }
 
     /**
@@ -133,11 +178,28 @@ public interface Attribute<T, F> {
      * @param <F>        字段类型
      * @param fieldalias 别名
      * @param field      字段，如果该字段不存在则抛异常
+     *
      * @return Attribute对象
      */
     @SuppressWarnings("unchecked")
     public static <T, F> Attribute<T, F> create(String fieldalias, final java.lang.reflect.Field field) {
-        return create((Class<T>) field.getDeclaringClass(), fieldalias, field, null, null);
+        return create((Class<T>) field.getDeclaringClass(), fieldalias, (Class) null, field, (java.lang.reflect.Method) null, (java.lang.reflect.Method) null, null);
+    }
+
+    /**
+     * 根据一个Field和field的别名生成 Attribute 对象。
+     *
+     * @param <T>        依附类的类型
+     * @param <F>        字段类型
+     * @param fieldalias 别名
+     * @param field      字段，如果该字段不存在则抛异常
+     * @param attach     附加对象
+     *
+     * @return Attribute对象
+     */
+    @SuppressWarnings("unchecked")
+    public static <T, F> Attribute<T, F> create(String fieldalias, final java.lang.reflect.Field field, Object attach) {
+        return create((Class<T>) field.getDeclaringClass(), fieldalias, (Class) null, field, (java.lang.reflect.Method) null, (java.lang.reflect.Method) null, attach);
     }
 
     /**
@@ -147,11 +209,31 @@ public interface Attribute<T, F> {
      * @param <F>       字段类型
      * @param clazz     指定依附的类
      * @param fieldname 字段名，如果该字段不存在则抛异常
+     *
      * @return Attribute对象
      */
     public static <T, F> Attribute<T, F> create(Class<T> clazz, final String fieldname) {
         try {
-            return create(clazz, fieldname, clazz.getDeclaredField(fieldname), null, null);
+            return create(clazz, fieldname, (Class) null, clazz.getDeclaredField(fieldname), (java.lang.reflect.Method) null, (java.lang.reflect.Method) null, null);
+        } catch (NoSuchFieldException | SecurityException ex) {
+            throw new RuntimeException(ex);
+        }
+    }
+
+    /**
+     * 根据一个Class和field真实名称生成 Attribute 对象。
+     *
+     * @param <T>       依附类的类型
+     * @param <F>       字段类型
+     * @param clazz     指定依附的类
+     * @param fieldname 字段名，如果该字段不存在则抛异常
+     * @param attach    附加对象
+     *
+     * @return Attribute对象
+     */
+    public static <T, F> Attribute<T, F> create(Class<T> clazz, final String fieldname, Object attach) {
+        try {
+            return create(clazz, fieldname, (Class) null, clazz.getDeclaredField(fieldname), (java.lang.reflect.Method) null, (java.lang.reflect.Method) null, attach);
         } catch (NoSuchFieldException | SecurityException ex) {
             throw new RuntimeException(ex);
         }
@@ -164,10 +246,26 @@ public interface Attribute<T, F> {
      * @param <F>   字段类型
      * @param clazz 指定依附的类
      * @param field 字段，如果该字段不存在则抛异常
+     *
      * @return Attribute对象
      */
     public static <T, F> Attribute<T, F> create(Class<T> clazz, final java.lang.reflect.Field field) {
-        return create(clazz, field.getName(), field);
+        return create(clazz, field.getName(), (Class) null, field, (java.lang.reflect.Method) null, (java.lang.reflect.Method) null, null);
+    }
+
+    /**
+     * 根据一个Class和Field生成 Attribute 对象。
+     *
+     * @param <T>    依附类的类型
+     * @param <F>    字段类型
+     * @param clazz  指定依附的类
+     * @param field  字段，如果该字段不存在则抛异常
+     * @param attach 附加对象
+     *
+     * @return Attribute对象
+     */
+    public static <T, F> Attribute<T, F> create(Class<T> clazz, final java.lang.reflect.Field field, Object attach) {
+        return create(clazz, field.getName(), (Class) null, field, (java.lang.reflect.Method) null, (java.lang.reflect.Method) null, attach);
     }
 
     /**
@@ -178,125 +276,175 @@ public interface Attribute<T, F> {
      * @param clazz      指定依附的类
      * @param fieldalias 字段别名
      * @param field      字段，如果该字段不存在则抛异常
+     *
      * @return Attribute对象
      */
     public static <T, F> Attribute<T, F> create(Class<T> clazz, final String fieldalias, final java.lang.reflect.Field field) {
-        return create(clazz, fieldalias, field, null, null);
+        return create(clazz, fieldalias, (Class) null, field, (java.lang.reflect.Method) null, (java.lang.reflect.Method) null, null);
     }
 
     /**
-     * 根据一个getter和setter方法生成 Attribute 对象。
-     * tgetter、setter不能同时为null
+     * 根据一个Class、field别名和Field生成 Attribute 对象。
+     *
+     * @param <T>        依附类的类型
+     * @param <F>        字段类型
+     * @param clazz      指定依附的类
+     * @param fieldalias 字段别名
+     * @param field      字段，如果该字段不存在则抛异常
+     * @param attach     附加对象
+     *
+     * @return Attribute对象
+     */
+    public static <T, F> Attribute<T, F> create(Class<T> clazz, final String fieldalias, final java.lang.reflect.Field field, Object attach) {
+        return create(clazz, fieldalias, (Class) null, field, (java.lang.reflect.Method) null, (java.lang.reflect.Method) null, attach);
+    }
+
+    /**
+     * 根据一个getter和setter方法生成 Attribute 对象。 tgetter、setter不能同时为null
      *
      * @param <T>    依附类的类型
      * @param <F>    字段类型
      * @param getter getter方法
      * @param setter setter方法
+     *
      * @return Attribute对象
      */
     @SuppressWarnings("unchecked")
     public static <T, F> Attribute<T, F> create(final java.lang.reflect.Method getter, final java.lang.reflect.Method setter) {
-        return create((Class) (getter == null ? setter.getDeclaringClass() : getter.getDeclaringClass()), null, null, getter, setter);
+        return create((Class) (getter == null ? setter.getDeclaringClass() : getter.getDeclaringClass()), (String) null, (Class) null, (java.lang.reflect.Field) null, getter, setter, null);
     }
 
     /**
-     * 根据Class、getter和setter方法生成 Attribute 对象。
-     * tgetter、setter不能同时为null
+     * 根据一个getter和setter方法生成 Attribute 对象。 tgetter、setter不能同时为null
+     *
+     * @param <T>    依附类的类型
+     * @param <F>    字段类型
+     * @param getter getter方法
+     * @param setter setter方法
+     * @param attach 附加对象
+     *
+     * @return Attribute对象
+     */
+    @SuppressWarnings("unchecked")
+    public static <T, F> Attribute<T, F> create(final java.lang.reflect.Method getter, final java.lang.reflect.Method setter, Object attach) {
+        return create((Class) (getter == null ? setter.getDeclaringClass() : getter.getDeclaringClass()), (String) null, (Class) null, (java.lang.reflect.Field) null, getter, setter, attach);
+    }
+
+    /**
+     * 根据Class、getter和setter方法生成 Attribute 对象。 tgetter、setter不能同时为null
      *
      * @param <T>    依附类的类型
      * @param <F>    字段类型
      * @param clazz  指定依附的类
      * @param getter getter方法
      * @param setter setter方法
+     *
      * @return Attribute对象
      */
     public static <T, F> Attribute<T, F> create(Class<T> clazz, final java.lang.reflect.Method getter, final java.lang.reflect.Method setter) {
-        return create(clazz, null, null, getter, setter);
+        return create(clazz, (String) null, (Class) null, (java.lang.reflect.Field) null, getter, setter, null);
     }
-        
+
+    /**
+     * 根据Class、getter和setter方法生成 Attribute 对象。 tgetter、setter不能同时为null
+     *
+     * @param <T>    依附类的类型
+     * @param <F>    字段类型
+     * @param clazz  指定依附的类
+     * @param getter getter方法
+     * @param setter setter方法
+     * @param attach 附加对象
+     *
+     * @return Attribute对象
+     */
+    public static <T, F> Attribute<T, F> create(Class<T> clazz, final java.lang.reflect.Method getter, final java.lang.reflect.Method setter, Object attach) {
+        return create(clazz, (String) null, (Class) null, (java.lang.reflect.Field) null, getter, setter, attach);
+    }
+
     /**
      * 根据Class生成getter、setter方法都存在的字段对应的 Attribute 对象数组。
-     * 
-     * @param <T>    依附类的类型
-     * @param clazz  指定依附的类
-     * @return  Attribute对象数组
+     *
+     * @param <T>   依附类的类型
+     * @param clazz 指定依附的类
+     *
+     * @return Attribute对象数组
      */
     public static <T> Attribute<T, ?>[] create(Class<T> clazz) {
         List<Attribute<T, ?>> list = new ArrayList<>();
-        for(java.lang.reflect.Field field : clazz.getFields()){
-            if(java.lang.reflect.Modifier.isStatic(field.getModifiers())) continue;
-            if(java.lang.reflect.Modifier.isFinal(field.getModifiers())) continue;
+        for (java.lang.reflect.Field field : clazz.getFields()) {
+            if (java.lang.reflect.Modifier.isStatic(field.getModifiers())) continue;
+            if (java.lang.reflect.Modifier.isFinal(field.getModifiers())) continue;
             list.add(create(clazz, field));
         }
-        for(java.lang.reflect.Method setter : clazz.getDeclaredMethods()){
-            if(java.lang.reflect.Modifier.isStatic(setter.getModifiers())) continue;
-            if(!setter.getName().startsWith("set")) continue;
-            if(setter.getReturnType() != void.class) continue;
-            if(setter.getParameterCount() != 1) continue;
+        for (java.lang.reflect.Method setter : clazz.getDeclaredMethods()) {
+            if (java.lang.reflect.Modifier.isStatic(setter.getModifiers())) continue;
+            if (!setter.getName().startsWith("set")) continue;
+            if (setter.getReturnType() != void.class) continue;
+            if (setter.getParameterCount() != 1) continue;
             Class t = setter.getParameterTypes()[0];
             String prefix = t == boolean.class || t == Boolean.class ? "is" : "get";
             java.lang.reflect.Method getter = null;
             try {
-                clazz.getMethod(setter.getName().replaceFirst("set", prefix));
-            } catch (Exception e){
+                getter = clazz.getMethod(setter.getName().replaceFirst("set", prefix));
+            } catch (Exception e) {
                 continue;
             }
             list.add(create(clazz, getter, setter));
         }
         return list.toArray(new Attribute[list.size()]);
     }
-    
+
     /**
      * 根据Class生成getter方法对应的 Attribute 对象数组。
-     * 
-     * @param <T>    依附类的类型
-     * @param clazz  指定依附的类
-     * @return  Attribute对象数组
+     *
+     * @param <T>   依附类的类型
+     * @param clazz 指定依附的类
+     *
+     * @return Attribute对象数组
      */
     public static <T> Attribute<T, ?>[] createGetters(Class<T> clazz) {
         List<Attribute<T, ?>> list = new ArrayList<>();
-        for(java.lang.reflect.Field field : clazz.getFields()){
-            if(java.lang.reflect.Modifier.isStatic(field.getModifiers())) continue;
-            if(java.lang.reflect.Modifier.isFinal(field.getModifiers())) continue;
+        for (java.lang.reflect.Field field : clazz.getFields()) {
+            if (java.lang.reflect.Modifier.isStatic(field.getModifiers())) continue;
+            if (java.lang.reflect.Modifier.isFinal(field.getModifiers())) continue;
             list.add(create(clazz, field));
         }
-        for(java.lang.reflect.Method method : clazz.getDeclaredMethods()){
-            if(java.lang.reflect.Modifier.isStatic(method.getModifiers())) continue;
-            if(!method.getName().startsWith("get") && !method.getName().startsWith("is")) continue;
-            if(method.getReturnType() == void.class) continue;
-            if(method.getParameterCount() != 0) continue;
+        for (java.lang.reflect.Method method : clazz.getDeclaredMethods()) {
+            if (java.lang.reflect.Modifier.isStatic(method.getModifiers())) continue;
+            if (!method.getName().startsWith("get") && !method.getName().startsWith("is")) continue;
+            if (method.getReturnType() == void.class) continue;
+            if (method.getParameterCount() != 0) continue;
             list.add(create(clazz, method, null));
         }
         return list.toArray(new Attribute[list.size()]);
     }
-    
+
     /**
      * 根据Class生成setter方法对应的 Attribute 对象数组。
-     * 
-     * @param <T>    依附类的类型
-     * @param clazz  指定依附的类
-     * @return  Attribute对象数组
+     *
+     * @param <T>   依附类的类型
+     * @param clazz 指定依附的类
+     *
+     * @return Attribute对象数组
      */
     public static <T> Attribute<T, ?>[] createSetters(Class<T> clazz) {
         List<Attribute<T, ?>> list = new ArrayList<>();
-        for(java.lang.reflect.Field field : clazz.getFields()){
-            if(java.lang.reflect.Modifier.isStatic(field.getModifiers())) continue;
-            if(java.lang.reflect.Modifier.isFinal(field.getModifiers())) continue;
+        for (java.lang.reflect.Field field : clazz.getFields()) {
+            if (java.lang.reflect.Modifier.isStatic(field.getModifiers())) continue;
+            if (java.lang.reflect.Modifier.isFinal(field.getModifiers())) continue;
             list.add(create(clazz, field));
         }
-        for(java.lang.reflect.Method method : clazz.getDeclaredMethods()){
-            if(java.lang.reflect.Modifier.isStatic(method.getModifiers())) continue;
-            if(!method.getName().startsWith("set")) continue;
-            if(method.getReturnType() != void.class) continue;
-            if(method.getParameterCount() != 1) continue;
-            list.add(create(clazz, null, method));
+        for (java.lang.reflect.Method method : clazz.getDeclaredMethods()) {
+            if (java.lang.reflect.Modifier.isStatic(method.getModifiers())) continue;
+            if (!method.getName().startsWith("set")) continue;
+            if (method.getParameterCount() != 1) continue;
+            list.add(create(clazz, (java.lang.reflect.Method) null, method));
         }
         return list.toArray(new Attribute[list.size()]);
     }
-    
+
     /**
-     * 根据Class、字段别名、getter和setter方法生成 Attribute 对象。
-     * tgetter、setter不能同时为null
+     * 根据Class、字段别名、getter和setter方法生成 Attribute 对象。 tgetter、setter不能同时为null
      *
      * @param <T>        依附类的类型
      * @param <F>        字段类型
@@ -304,15 +452,32 @@ public interface Attribute<T, F> {
      * @param fieldalias 字段别名
      * @param getter     getter方法
      * @param setter     setter方法
+     *
      * @return Attribute对象
      */
     public static <T, F> Attribute<T, F> create(Class<T> clazz, final String fieldalias, final java.lang.reflect.Method getter, final java.lang.reflect.Method setter) {
-        return create(clazz, fieldalias, null, getter, setter);
+        return create(clazz, fieldalias, (Class) null, (java.lang.reflect.Field) null, getter, setter, null);
     }
 
     /**
-     * 根据Class、字段别名、Field、getter和setter方法生成 Attribute 对象。
-     * Field、tgetter、setter不能同时为null
+     * 根据Class、字段别名、getter和setter方法生成 Attribute 对象。 tgetter、setter不能同时为null
+     *
+     * @param <T>        依附类的类型
+     * @param <F>        字段类型
+     * @param clazz      指定依附的类
+     * @param fieldalias 字段别名
+     * @param getter     getter方法
+     * @param setter     setter方法
+     * @param attach     附加对象
+     *
+     * @return Attribute对象
+     */
+    public static <T, F> Attribute<T, F> create(Class<T> clazz, final String fieldalias, final java.lang.reflect.Method getter, final java.lang.reflect.Method setter, Object attach) {
+        return create(clazz, fieldalias, (Class) null, (java.lang.reflect.Field) null, getter, setter, attach);
+    }
+
+    /**
+     * 根据Class、字段别名、Field、getter和setter方法生成 Attribute 对象。 Field、tgetter、setter不能同时为null
      *
      * @param <T>        依附类的类型
      * @param <F>        字段类型
@@ -321,10 +486,98 @@ public interface Attribute<T, F> {
      * @param field      字段
      * @param getter     getter方法
      * @param setter     setter方法
+     *
+     * @return Attribute对象
+     */
+    public static <T, F> Attribute<T, F> create(final Class<T> clazz, String fieldalias, final java.lang.reflect.Field field, java.lang.reflect.Method getter, java.lang.reflect.Method setter) {
+        return create(clazz, fieldalias, (Class) null, field, getter, setter, null);
+    }
+
+    /**
+     * 根据Class、字段别名、Field、getter和setter方法生成 Attribute 对象。 Field、tgetter、setter不能同时为null
+     *
+     * @param <T>        依附类的类型
+     * @param <F>        字段类型
+     * @param clazz      指定依附的类
+     * @param fieldalias 字段别名
+     * @param field      字段
+     * @param getter     getter方法
+     * @param setter     setter方法
+     * @param attach     附加对象
+     *
+     * @return Attribute对象
+     */
+    public static <T, F> Attribute<T, F> create(final Class<T> clazz, String fieldalias, final java.lang.reflect.Field field, java.lang.reflect.Method getter, java.lang.reflect.Method setter, Object attach) {
+        return create(clazz, fieldalias, (Class) null, field, getter, setter, attach);
+    }
+
+    /**
+     * 根据Class、字段别名、字段类型生成虚构的 Attribute 对象,get、set方法为空方法。
+     *
+     * @param <T>        依附类的类型
+     * @param <F>        字段类型
+     * @param clazz      指定依附的类
+     * @param fieldalias 字段别名
+     * @param fieldtype  字段的类
+     *
+     * @return Attribute对象
+     */
+    public static <T, F> Attribute<T, F> create(final Class<T> clazz, String fieldalias, final Class<F> fieldtype) {
+        return create(clazz, fieldalias, fieldtype, (java.lang.reflect.Type) null, (Function) null, (BiConsumer) null, null);
+    }
+
+    /**
+     * 根据Class、字段别名、字段类型生成虚构的 Attribute 对象,get、set方法为空方法。
+     *
+     * @param <T>        依附类的类型
+     * @param <F>        字段类型
+     * @param clazz      指定依附的类
+     * @param fieldalias 字段别名
+     * @param fieldtype  字段的类
+     * @param attach     附加对象
+     *
+     * @return Attribute对象
+     */
+    public static <T, F> Attribute<T, F> create(final Class<T> clazz, String fieldalias, final Class<F> fieldtype, Object attach) {
+        return create(clazz, fieldalias, fieldtype, (java.lang.reflect.Type) null, (Function) null, (BiConsumer) null, attach);
+    }
+
+    /**
+     * 根据Class、字段别名、字段类型、Field、getter和setter方法生成 Attribute 对象。 fieldalias/fieldtype、Field、tgetter、setter不能同时为null.
+     *
+     * @param <T>        依附类的类型
+     * @param <F>        字段类型
+     * @param clazz      指定依附的类
+     * @param fieldalias 字段别名
+     * @param fieldtype  字段类型
+     * @param field      字段
+     * @param getter     getter方法
+     * @param setter     setter方法
+     *
      * @return Attribute对象
      */
     @SuppressWarnings("unchecked")
-    public static <T, F> Attribute<T, F> create(final Class<T> clazz, String fieldalias, final java.lang.reflect.Field field, java.lang.reflect.Method getter, java.lang.reflect.Method setter) {
+    public static <T, F> Attribute<T, F> create(final Class<T> clazz, String fieldalias, final Class<F> fieldtype, final java.lang.reflect.Field field, java.lang.reflect.Method getter, java.lang.reflect.Method setter) {
+        return create(clazz, fieldalias, fieldtype, field, getter, setter, null);
+    }
+
+    /**
+     * 根据Class、字段别名、字段类型、Field、getter和setter方法生成 Attribute 对象。 fieldalias/fieldtype、Field、tgetter、setter不能同时为null.
+     *
+     * @param <T>        依附类的类型
+     * @param <F>        字段类型
+     * @param clazz      指定依附的类
+     * @param fieldalias 字段别名
+     * @param fieldtype  字段类型
+     * @param field      字段
+     * @param getter     getter方法
+     * @param setter     setter方法
+     * @param attach     附加对象
+     *
+     * @return Attribute对象
+     */
+    @SuppressWarnings("unchecked")
+    public static <T, F> Attribute<T, F> create(final Class<T> clazz, String fieldalias, final Class<F> fieldtype, final java.lang.reflect.Field field, java.lang.reflect.Method getter, java.lang.reflect.Method setter, Object attach) {
         if (fieldalias != null && fieldalias.isEmpty()) fieldalias = null;
         int mod = field == null ? java.lang.reflect.Modifier.STATIC : field.getModifiers();
         if (field != null && !java.lang.reflect.Modifier.isStatic(mod) && !java.lang.reflect.Modifier.isPublic(mod)) {
@@ -353,30 +606,38 @@ public interface Attribute<T, F> {
             if (field != null) {
                 fieldalias = field.getName();
             } else {
-                String s;
+                String s = null;
                 if (getter != null) {
                     s = getter.getName().substring(getter.getName().startsWith("is") ? 2 : 3);
-                } else {
+                } else if (setter != null) {
                     s = setter.getName().substring(3);
                 }
-                char[] d = s.toCharArray();
-                if (d.length < 2 || Character.isLowerCase(d[1])) {
-                    d[0] = Character.toLowerCase(d[0]);
+                if (s != null) {
+                    char[] d = s.toCharArray();
+                    if (d.length < 2 || Character.isLowerCase(d[1])) {
+                        d[0] = Character.toLowerCase(d[0]);
+                    }
+                    fieldalias = new String(d);
                 }
-                fieldalias = new String(d);
             }
         }
-        if (tgetter == null && tsetter == null && tfield == null) {
+        if (fieldalias == null && fieldtype == null && tgetter == null && tsetter == null && tfield == null) {
             throw new RuntimeException("[" + clazz + "]have no public field or setter or getter");
         }
         final String fieldname = fieldalias;
-        Class column;
+        Class column = fieldtype;
+        java.lang.reflect.Type generictype = fieldtype;
         if (tfield != null) { // public tfield
             column = tfield.getType();
+            generictype = tfield.getGenericType();
         } else if (tgetter != null) {
             column = tgetter.getReturnType();
-        } else { // tsetter != null
+            generictype = tgetter.getGenericReturnType();
+        } else if (tsetter != null) {
             column = tsetter.getParameterTypes()[0];
+            generictype = tsetter.getGenericParameterTypes()[0];
+        } else if (fieldtype == null) {
+            throw new RuntimeException("[" + clazz + "]have no public field or setter or getter");
         }
         final Class pcolumn = column;
         if (column.isPrimitive()) column = java.lang.reflect.Array.get(java.lang.reflect.Array.newInstance(column, 1), 0).getClass();
@@ -386,24 +647,35 @@ public interface Attribute<T, F> {
         final String interDesc = Type.getDescriptor(clazz);
         final String columnDesc = Type.getDescriptor(column);
 
-        ClassLoader loader = Attribute.class.getClassLoader();
+        ClassLoader loader = Thread.currentThread().getContextClassLoader();
         String newDynName = supDynName + "_Dyn_" + clazz.getSimpleName() + "_"
-                + fieldname.substring(fieldname.indexOf('.') + 1) + "_" + pcolumn.getSimpleName().replace("[]", "Array");
+            + fieldname.substring(fieldname.indexOf('.') + 1) + "_" + pcolumn.getSimpleName().replace("[]", "Array");
         if (String.class.getClassLoader() != clazz.getClassLoader()) {
             loader = clazz.getClassLoader();
             newDynName = interName + "_Dyn" + Attribute.class.getSimpleName() + "_"
-                    + fieldname.substring(fieldname.indexOf('.') + 1) + "_" + pcolumn.getSimpleName().replace("[]", "Array");
+                + fieldname.substring(fieldname.indexOf('.') + 1) + "_" + pcolumn.getSimpleName().replace("[]", "Array");
         }
         try {
-            return (Attribute) Class.forName(newDynName.replace('/', '.')).newInstance();
+            Attribute rs = (Attribute) loader.loadClass(newDynName.replace('/', '.')).getDeclaredConstructor().newInstance();
+            java.lang.reflect.Field _gtype = rs.getClass().getDeclaredField("_gtype");
+            _gtype.setAccessible(true);
+            _gtype.set(rs, generictype);
+            return rs;
         } catch (Throwable ex) {
         }
         //---------------------------------------------------
-        final ClassWriter cw = new ClassWriter(0);
+        final ClassWriter cw = new ClassWriter(COMPUTE_FRAMES);
         MethodVisitor mv;
 
         cw.visit(V1_8, ACC_PUBLIC + ACC_FINAL + ACC_SUPER, newDynName, "Ljava/lang/Object;L" + supDynName + "<" + interDesc + columnDesc + ">;", "java/lang/Object", new String[]{supDynName});
-
+        { //_gtype
+            FieldVisitor fv = cw.visitField(ACC_PRIVATE, "_gtype", "Ljava/lang/reflect/Type;", null, null);
+            fv.visitEnd();
+        }
+        { //_attach
+            FieldVisitor fv = cw.visitField(ACC_PRIVATE, "_attach", "Ljava/lang/Object;", null, null);
+            fv.visitEnd();
+        }
         { //构造方法
             mv = cw.visitMethod(ACC_PUBLIC, "<init>", "()V", null, null);
             mv.visitVarInsn(ALOAD, 0);
@@ -441,6 +713,22 @@ public interface Attribute<T, F> {
             } else {
                 mv.visitLdcInsn(Type.getType(pcolumn));
             }
+            mv.visitInsn(ARETURN);
+            mv.visitMaxs(1, 1);
+            mv.visitEnd();
+        }
+        { //genericType
+            mv = cw.visitMethod(ACC_PUBLIC, "genericType", "()Ljava/lang/reflect/Type;", null, null);
+            mv.visitVarInsn(ALOAD, 0);
+            mv.visitFieldInsn(GETFIELD, newDynName, "_gtype", "Ljava/lang/reflect/Type;");
+            mv.visitInsn(ARETURN);
+            mv.visitMaxs(1, 1);
+            mv.visitEnd();
+        }
+        { //attach
+            mv = cw.visitMethod(ACC_PUBLIC, "attach", "()Ljava/lang/Object;", "<E:Ljava/lang/Object;>()TE;", null);
+            mv.visitVarInsn(ALOAD, 0);
+            mv.visitFieldInsn(GETFIELD, newDynName, "_attach", "Ljava/lang/Object;");
             mv.visitInsn(ARETURN);
             mv.visitMaxs(1, 1);
             mv.visitEnd();
@@ -547,9 +835,128 @@ public interface Attribute<T, F> {
             }
         }.loadClass(newDynName.replace('/', '.'), bytes);
         try {
-            return creatorClazz.newInstance();
+            Attribute rs = creatorClazz.getDeclaredConstructor().newInstance();
+            java.lang.reflect.Field _gtype = rs.getClass().getDeclaredField("_gtype");
+            _gtype.setAccessible(true);
+            _gtype.set(rs, generictype);
+            java.lang.reflect.Field _attach = rs.getClass().getDeclaredField("_attach");
+            _attach.setAccessible(true);
+            _attach.set(rs, attach);
+            return rs;
         } catch (Exception ex) {
             throw new RuntimeException(ex);
         }
+    }
+
+    /**
+     * 根据Class、字段名、字段类型、getter和setter方法生成 Attribute 对象。 clazz、fieldname、fieldtype都不能为null
+     *
+     * @param <T>       依附类的类型
+     * @param <F>       字段类型
+     * @param clazz     指定依附的类
+     * @param fieldname 字段名
+     * @param fieldtype 字段类型
+     * @param getter    getter方法
+     * @param setter    setter方法
+     *
+     * @return Attribute对象
+     */
+    public static <T, F> Attribute<T, F> create(final Class<T> clazz, final String fieldname, final Class<F> fieldtype, final Function<T, F> getter, final BiConsumer<T, F> setter) {
+        return create(clazz, fieldname, fieldtype, fieldtype, getter, setter);
+    }
+
+    /**
+     * 根据Class、字段名、字段类型、getter和setter方法生成 Attribute 对象。 clazz、fieldname、fieldtype都不能为null
+     *
+     * @param <T>       依附类的类型
+     * @param <F>       字段类型
+     * @param clazz     指定依附的类
+     * @param fieldname 字段名
+     * @param fieldtype 字段类型
+     * @param getter    getter方法
+     * @param setter    setter方法
+     * @param attach    附加对象
+     *
+     * @return Attribute对象
+     */
+    public static <T, F> Attribute<T, F> create(final Class<T> clazz, final String fieldname, final Class<F> fieldtype, final Function<T, F> getter, final BiConsumer<T, F> setter, Object attach) {
+        return create(clazz, fieldname, fieldtype, fieldtype, getter, setter, attach);
+    }
+
+    /**
+     * 根据Class、字段名、字段类型、getter和setter方法生成 Attribute 对象。 clazz、fieldname、fieldtype都不能为null
+     *
+     * @param <T>              依附类的类型
+     * @param <F>              字段类型
+     * @param clazz            指定依附的类
+     * @param fieldname        字段名
+     * @param fieldtype        字段类型
+     * @param fieldGenericType 字段泛型
+     * @param getter           getter方法
+     * @param setter           setter方法
+     *
+     * @return Attribute对象
+     */
+    public static <T, F> Attribute<T, F> create(final Class<T> clazz, final String fieldname, final Class<F> fieldtype,
+        final java.lang.reflect.Type fieldGenericType, final Function<T, F> getter, final BiConsumer<T, F> setter) {
+        return create(clazz, fieldname, fieldtype, fieldGenericType, getter, setter, null);
+    }
+
+    /**
+     * 根据Class、字段名、字段类型、getter和setter方法生成 Attribute 对象。 clazz、fieldname、fieldtype都不能为null
+     *
+     * @param <T>              依附类的类型
+     * @param <F>              字段类型
+     * @param clazz            指定依附的类
+     * @param fieldname        字段名
+     * @param fieldtype        字段类型
+     * @param fieldGenericType 字段泛型
+     * @param getter           getter方法
+     * @param setter           setter方法
+     * @param attach           附加对象
+     *
+     * @return Attribute对象
+     */
+    public static <T, F> Attribute<T, F> create(final Class<T> clazz, final String fieldname, final Class<F> fieldtype,
+        final java.lang.reflect.Type fieldGenericType, final Function<T, F> getter, final BiConsumer<T, F> setter, final Object attach) {
+        Objects.requireNonNull(clazz);
+        Objects.requireNonNull(fieldname);
+        Objects.requireNonNull(fieldtype);
+        return new Attribute<T, F>() {
+            @Override
+            public Class<F> type() {
+                return fieldtype;
+            }
+
+            @Override
+            public java.lang.reflect.Type genericType() {
+                return fieldGenericType;
+            }
+
+            @Override
+            public <E> E attach() {
+                return (E) attach;
+            }
+
+            @Override
+            public Class<T> declaringClass() {
+                return clazz;
+            }
+
+            @Override
+            public String field() {
+                return fieldname;
+            }
+
+            @Override
+            public F get(T obj) {
+                return getter == null ? null : getter.apply(obj);
+            }
+
+            @Override
+            public void set(T obj, F value) {
+                if (setter != null) setter.accept(obj, value);
+            }
+        };
     }
 }
